--- a/stores/index.html
+++ b/stores/index.html
@@ -4,12 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Api</title>
 </head>
 <body>
-    
-
-
+   
+    <section class="crud">
+        <article>
+            <h2 style="text-align: center;">agregar tienda</h2>
+            <form class="crud-formulario">
+                <input type="text" name="username" required>
+                <br>
+                <input type="text" name="passwor" required>
+                <br>
+                <input type="submit" value="enviar">
+                <input type="hidden" name="id">
+            </form>
+        </article>
+        <article>
+            <h2>tiendas</h2>
+            <table class="tabla">
+                <thead>
+                    <tr>
+                        <th>nombre</th>
+                        <th>items</th>
+                        <th>acciones</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </article>
+    </section>
+    <template id="c-template">
+        <tr>
+            <td class="name"></td>
+            <td class="items"></td>
+            <td>
+                <button class="editar"></button>
+                <button class="eliminar"></button>
+            </td>
+        </tr>
+    </template>
     <script src="main.js"></script>
 </body>
 </html>
