--- a/stores/index.html
+++ b/stores/index.html
@@ -10,8 +10,8 @@
    
     <section class="crud">
         <article>
-            <h2 style="text-align: center;">agregar tienda</h2>
-            <form class="crud-formulario">
+            <h2 class="c-titulo">agregar tienda</h2>
+            <form class="c-formulario">
                 <input type="text" name="username" required>
                 <br>
                 <input type="text" name="passwor" required>
@@ -22,7 +22,7 @@
         </article>
         <article>
             <h2>tiendas</h2>
-            <table class="tabla">
+            <table class="c-tabla">
                 <thead>
                     <tr>
                         <th>nombre</th>
