mostrando datos, ocurrio un error

--- a/stores/index.html
+++ b/stores/index.html
@@ -12,10 +12,10 @@
         <article>
             <h2 class="c-titulo">agregar tienda</h2>
             <form class="c-formulario">
-                <input type="text" name="username" required>
-                <br>
-                <input type="text" name="passwor" required>
-                <br>
+                <input type="text" name="nombre" placeholder="nombre" required>
+                <br> <br>
+                <input type="text" name="item" placeholder="item" required>
+                <br> <br>
                 <input type="submit" value="enviar">
                 <input type="hidden" name="id">
             </form>
