avance, sigue con error de Api

--- a/stores/index.html
+++ b/stores/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Api</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
                 <input type="hidden" name="id">
             </form>
         </article>
-        <article>
+        <article class="article">
             <h2>tiendas</h2>
             <table class="c-tabla">
                 <thead>
